Updated pom to use correct versions for test discovery